log
Thu 14 Sep 2023 04:15:02 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:3: error: expected ‘,’ or ‘;’ before ‘return’
   43 |   return NULL;
      |   ^~~~~~
treemap.c:40:12: error: unused variable ‘map’ [-Werror=unused-variable]
   40 |   TreeMap* map = malloc(sizeof(TreeMap))
      |            ^~~
treemap.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d2731c4
Thu 14 Sep 2023 04:15:08 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:12: error: unused variable ‘map’ [-Werror=unused-variable]
   40 |   TreeMap* map = malloc(sizeof(TreeMap));
      |            ^~~
cc1: all warnings being treated as errors
Compilation failed
dbc3d06
Thu 14 Sep 2023 04:15:52 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|8
total_score: 0/70
db6bfd3
Thu 14 Sep 2023 04:16:29 PM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
32a5e20
